# eudaq

./: .gitignore  CMakeLists.txt  README.md  STARTRUN  config_ipbus.sh  createSimLink  setup_eudaq_cmshgcal.sh  start_exe_on_rpi.sh  stop_exe_on_rpi.sh
conf/: ExampleConfig.conf
etc/scripts/: KILLRUN.local  STARTRUN.local
gui/src/: euRun.cc
main/exe/: CMakeLists.txt
main/exe/src/: ExampleProducer.cxx  PIReader.cxx
main/include/eudaq/: StandardEvent.hh
main/lib/: CMakeLists.txt
main/lib/plugins/: HexaBoardConverterPlugin.cc  PIConverterPlugin.cc
main/lib/src/: Configuration.cc  DataCollector.cc  ExampleHardware.cc  Monitor.cc  StandardEvent.cc
monitors/cmshgcal_onlinemon/: CMakeLists.txt
monitors/cmshgcal_onlinemon/include/: BaseCollection.hh  CorrelationCollection.hh  CrossCorrelationCollection.hh  CrossCorrelationHistos.hh  HGCalAnalysisCollection.hh  HGCalAnalysisHistos.hh  HexagonCollection.hh  HexagonCorrelationHistos.hh  HexagonHistos.hh  OnlineMon.hh  PlaneIDtoLayerMapping.h  TDCHitsCollection.hh  TDCHitsHistos.hh  WireChamberCollection.hh  WireChamberHistos.hh
monitors/cmshgcal_onlinemon/src/: CMSHGCalLayerSumHistos.cc  CorrelationCollection.cc  CrossCorrelationCollection.cc  CrossCorrelationHistos.cc  DWCToHGCALCorrelationCollection.cc  DWCToHGCALCorrelationHistos.cc  DigitizerCollection.cc  DigitizerHistos.cc  HGCalAnalysisCollection.cc  HGCalAnalysisHistos.cc  HexagonCollection.cc  HexagonCorrelationCollection.cc  HexagonCorrelationHistos.cc  HexagonHistos.cc  HitmapCollection.cc  OnlineMon.cxx  OnlineMonConfiguration.cc  OnlineMonWindow.cc  TDCHitsCollection.cc  TDCHitsHistos.cc  WireChamberCollection.cc  WireChamberCorrelationCollection.cc  WireChamberCorrelationHistos.cc  WireChamberHistos.cc
monitors/onlinemon/src/: OnlineMon.cxx
producers/: CMakeLists.txt
producers/calice/: CMakeLists.txt
producers/calice/AHCAL/include/: ScReader.hh
producers/cmshgcal/: CMakeLists.txt  STARTRUN  STARTRUN_ALL  STARTRUN_PED  STARTRUN_RPI  STARTRUN_WITH_DWC
producers/cmshgcal/conf/: AllInOneProducer.conf  HgcalProducer.conf  OnlineMon.conf  PedestalProducer.conf  RpiProducer.conf  cmshgcal.init
producers/cmshgcal/etc/: connection.xml  rdout.xml
producers/cmshgcal/include/: HGCalController.h  TriggerController.h  compressor.h  unpacker.h
producers/cmshgcal/onlinemon/: CMakeLists.txt
producers/cmshgcal/onlinemon/include/: BaseCollection.hh  HexagonCollection.hh  HexagonHistos.hh  OnlineMon.hh  OnlineMonConfiguration.hh
producers/cmshgcal/onlinemon/src/: AhcalCollection.cc  AhcalHistos.cc  BaseCollection.cc  HexagonCollection.cc  HexagonHistos.cc  HitmapCollection.cc  OnlineMon.cxx  OnlineMonConfiguration.cc  WireChamberCollection.cc  WireChamberHistos.cc
producers/cmshgcal/scripts/: LocalDataOverTCP.py  RpiDaqTcp.py  plot.py
producers/cmshgcal/src/: HGCalController.cc  HGCalDataUnpacker.cxx  HGCalOnly_DAQ.cxx  HGCalProducer.cxx  HexaBoardConverterPlugin.cc  IpbusHwController.cc  RpiProducer.cxx  TriggerController.cc  unpacker.cc
producers/cmshgcal_dwc/: CMakeLists.txt  STARTRUN
producers/cmshgcal_dwc/conf/: hgcaldwc.conf
producers/cmshgcal_dwc/include/: CAEN_v1290.h  CAENv1290Unpacker.h
producers/cmshgcal_dwc/src/: CAEN_v1290.cc  CAENv1290Unpacker.cc  Unpacker.cc  WireChamberConverterPlugin.cc  WireChamberProducer.cxx
producers/cmshgcal_mcp/: CMakeLists.txt  STARTRUN
producers/cmshgcal_mcp/conf/: hgcalmcp.conf
producers/cmshgcal_mcp/include/: CAEN_v1742.h  CAENv1742Unpacker.h
producers/cmshgcal_mcp/src/: CAEN_v1742.cc  CAENv1742Unpacker.cc  MCPConverterPlugin.cc  MCPProducer.cxx
producers/pi/include/: HexGrid.h
producers/pi/src/: HexGrid.cc  PIController.cxx  PIConverterPlugin.cc
user/: CMakeLists.txt
user/cmshgcal/: CMakeLists.txt
user/cmshgcal/include/: HGCalProducer.h  IpbusHwController.h
user/cmshgcal/misc/: hgcal.conf
user/cmshgcal/src/: HGCalProducer.cc  HGCalProducer.cxx  IpbusHwController.cc  TriggerController.cc
user/cmshgcal_dwc/: CMakeLists.txt
user/cmshgcal_dwc/include/: Unpacker.h
user/cmshgcal_dwc/src/: WireChamberConverterPlugin.cc  WireChamberProducer.cxx
